[package]
name = "rust-web-text-based"
version = "0.1.0"
authors = ["Zireael07 <zi@mail.com>"]
edition = "2018"

# For WASM pack
[lib]
crate-type = ["cdylib"]

[dependencies]
# The `wasm-bindgen` crate provides the bare minimum functionality needed
# to interact with JavaScript.
wasm-bindgen = { version = "0.2.71", features = ["serde-serialize"] }

wasm-bindgen-futures = "0.4.21"

# The `web-sys` crate allows you to interact with the various browser APIs,
# like the DOM.
[dependencies.web-sys]
version = "0.3.4"
features = ["console",
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'HtmlImageElement',
  'Window',
  'Headers',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
]

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so it's only enabled
# in debug mode.
[target."cfg(debug_assertions)".dependencies]
console_error_panic_hook = "0.1.5" 

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0" # For save/load

# Data files
ron = "*"
lazy_static  = "1.4.0"

# ECS
hecs = "0.3.0"

# RNG
rand = { version = "0.7.3", features = ["wasm-bindgen"] }
rand_xoshiro = { version = "0.4.0" }